As a bank I can accept incoming transactions from another bank [Delivers #179995252]
As a bank I can accept incoming transactions from another bank [Delivers #179995252]
